<resources>
    <string name="app_name">Coldet</string>
    <string name="wallet_list">Wallet List</string>
    <string name="confirm">확인</string>
    <string name="permissionCameraDenied">If camera is not authorized, can\'t scan QR code.</string>
    <string name="errIncorrectICXAddr">Incorrect ICX address</string>
    <string name="qrcodeScanGuide">Adrress can be imported by QR code.</string>
    <string name="getAddress">Address:</string>
    <string name="address_hint">주소를 입력하거나 QR 코드를 통해 가져오세요.</string>
    <string name="value_hint">보낼 수량을 입력하세요.</string>
    <string name="network_hint">사용할 네트워크를 선택하세요.</string>
    <string name="create_transaction">Send</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="value">Value:</string>
    <string name="icx">ICX</string>
    <string name="network_id">Network ID:</string>
    <string name="transaction_info">Transaction Info</string>
    <string name="tag_nfc">Tag phone to NFC module</string>
    <string name="last_confirm">Last Confirm</string>
    <string name="cancel">취소</string>
</resources>